# cmake-vcpkg-toolchain-example

./: CMakeLists.txt  README.md  bootstrap.sh  vcpkg.json
scripts/: build.bat  build.sh
src/: main.cpp
